create new recipe section

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>Recipes</title>
+        <title>One Pot Meals</title>
     </head>
     <body>
-        <h1>
-            Odin Recipes
-        </h1>
+        <h1> One Pot Meals </h1>
+        <a href = "recipes/gbsNoodles.html">Ground Beef Stroganoff Noodles</a>
     </body>
 </html>
