--- a/recipes/gbsNoodles.html
+++ b/recipes/gbsNoodles.html
@@ -1,1 +1,29 @@
 <h1> Ground Beef Stroganoff Noodles </h1>
+
+<img src = "..//images/gbsNoodles.jpeg" width="400" height="500">
+<p>Beef Stroganoff is a popular Russian dish of small pieces of beef fillet sautéed in sour cream sauce together with onions and mushrooms.
+The dish was named after Count Alexander Grigorievich Stroganoff, who lived in the late 19th century in Odessa.</p>
+<h3> Ingredients </h3>
+    <ul type = "square">
+        <li>1 tablespoon unsalted butter</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 cup thinly sliced mushrooms</li>
+        <li>1 teaspoon salt, plus more to taste</li>
+        <li>½ cup diced onion</li>
+        <li>1 pound ground beef</li>
+        <li>2 cloves minced garlic</li>
+        <li>1 ⅓ tablespoons flour</li>
+        <li>2 tablespoons vodka (Optional)</li>
+        <li>2 ½ cups beef broth, or as needed</li>
+        <li>1 cup water</li>
+        <li>2 ½ cups egg noodles</li>
+        <li>½ cup sour cream, plus more for serving</li>
+        <li>2 tablespoons fresh sliced chives or green onions</li>
+    </ul>
+<h3>Steps</h3>
+    <ol>   
+        <li>Melt butter and oil in a skillet over medium-high heat. Add mushrooms, season with salt, and saute, stirring occasionally, until they turn golden brown, 5 to 10 minutes. Add onion and ground beef. Cook, stirring, until meat is browned and crumbly, and onions turn soft and translucent, about 5 minutes. Season with black pepper and cayenne.</li>
+        <li>Stir in minced garlic and flour, and cook for 1 minute. Pour in vodka and allow to evaporate, about 30 seconds. Stir in beef broth and water and bring to a simmer. Cook, stirring occasionally, for 10 minutes.</li>
+        <li>Reduce heat to medium, and mix in noodles. Cover with a tight-fitting lid and simmer for 5 minutes. Uncover and stir thoroughly. Cover again and cook until noodles are just tender, about 3 minutes. (See Cook's Note.)</li>
+        <li>Once noodles are cooked, reduce heat to low, and stir in sour cream. Serve immediately with additional sour cream and green onions or chives if so desired.        </li>
+    </ol>
