--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     </head>
     <body>
         <h1> One Pot Meals </h1>
-        <a href = "recipes/gbsNoodles.html">Ground Beef Stroganoff Noodles</a>
+        <img src="images/thumbnail.jpeg" width="950" height = "600">
+        <h2>RECIPES</h2>
+        <ul>
+            <li>
+                <a href = "recipes/gbsNoodles.html">Ground Beef Stroganoff Noodles</a>
+            </li>
+            <li>
+                <a href= "recipes/cCurry.html">Chicken Curry</a>
+            </li>
+        </ul>
+        
     </body>
 </html>
